--- a/tubeclone.html
+++ b/tubeclone.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/ab47bdee74.js" 
         crossorigin="anonymous"></script>
         <script src="tubeclone.js" ></script>
-        <!-- <link rel="shortcut icon" href="youtube-logo-png-2061.png" type="image/x-icon"> -->
+        <link rel="shortcut icon" href="youtube-logo-png-2061.png" type="image/x-icon">
         <!-- <a href="https://www.flaticon.com/free-icons/youtube" title="youtube icons">Youtube icons created by Freepik - Flaticon</a>
         <link rel="icon" href="./youtube.png" id="u">  -->
     <title>YouTube</title>
