--- a/tubeclone.html
+++ b/tubeclone.html
@@ -63,7 +63,9 @@
                 <a href="# " class="sidebar-item"><span class="material-symbols-outlined">
                     home
                     </span>Home</a>
-                <a href="# " class="sidebar-item">Shorts</a>
+                <a href="# " class="sidebar-item"><span class="material-symbols-outlined">
+                    blur_short
+                    </span>Shorts</a>
                 <a href="# " class="sidebar-item"><span class="material-symbols-outlined">
                     subscriptions
                     </span>Subscriptions</a>
